Few tests - abort/incomplete/dmesg-warn - ODEBUG: free active (active state 0) object: .* object type: i915_active hint: __i915_vma_active
<7> [161.354030] [drm:eb_lookup_vmas [i915]] EINVAL at eb_validate_vma:508
<4> [161.359305] ------------[ cut here ]------------
<3> [161.359441] ODEBUG: free active (active state 0) object: ffff88811643b958 object type: i915_active hint: __i915_vma_active+0x0/0x50 [i915]
<4> [161.360082] WARNING: CPU: 5 PID: 276 at lib/debugobjects.c:514 debug_print_object+0x80/0xb0
<4> [161.360098] Modules linked in: vgem drm_shmem_helper fuse snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic ledtrig_audio i915 x86_pkg_temp_thermal coretemp kvm_intel kvm smsc75xx snd_hda_intel irqbypass snd_intel_dspcfg usbnet prime_numbers crct10dif_pclmul mei_pxp mei_hdcp wmi_bmof mii e1000e igc i2c_algo_bit snd_hda_codec crc32_pclmul ttm ptp i2c_i801 snd_hwdep ghash_clmulni_intel pps_core snd_hda_core i2c_smbus drm_buddy mei_me snd_pcm drm_display_helper mei drm_kms_helper intel_lpss_pci video wmi
<4> [161.360304] CPU: 5 PID: 276 Comm: kworker/5:2 Not tainted 6.5.0-rc1-CI_DRM_13375-g003f860e5577+ #1
<4> [161.360314] Hardware name: Intel Corporation Rocket Lake Client Platform/RocketLake S UDIMM 6L RVP, BIOS RKLSFWI1.R00.3173.A03.2204210138 04/21/2022
<4> [161.360322] Workqueue: i915-unordered __intel_wakeref_put_work [i915]
<4> [161.360592] RIP: 0010:debug_print_object+0x80/0xb0
<4> [161.360603] Code: 34 24 83 c2 01 8b 4b 14 48 c7 c7 50 70 46 82 89 15 85 c2 af 02 8b 53 10 50 4c 8b 4d 00 48 8b 14 d5 60 b4 04 82 e8 90 64 a9 ff <0f> 0b 58 83 05 ea 25 25 01 01 48 83 c4 08 5b 5d c3 cc cc cc cc 83
<4> [161.360612] RSP: 0018:ffffc9000074bd10 EFLAGS: 00010286
<4> [161.360624] RAX: 0000000000000000 RBX: ffff88811d3c8f80 RCX: 0000000000000000
<4> [161.360631] RDX: 0000000000000002 RSI: ffffffff823df072 RDI: 00000000ffffffff
<4> [161.360638] RBP: ffffffffa08cd7e0 R08: 0000000000000000 R09: ffffc9000074bbb0
<4> [161.360644] R10: 0000000000000001 R11: 0000000000000001 R12: ffff88811643b958
<4> [161.360650] R13: ffffffff841b8160 R14: ffff888162e982e8 R15: ffff888162e98040
<4> [161.360657] FS: 0000000000000000(0000) GS:ffff88844f480000(0000) knlGS:0000000000000000
<4> [161.360686] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [161.360694] CR2: 00007f1e21931c80 CR3: 000000011a614006 CR4: 0000000000770ee0
<4> [161.360701] PKRU: 55555554
<4> [161.360707] Call Trace:
<4> [161.360714] <TASK>
<4> [161.360722] ? __warn+0x7f/0x170
<4> [161.360735] ? debug_print_object+0x80/0xb0
<4> [161.360765] ? report_bug+0x1f8/0x200
<4> [161.360777] ? __irq_work_queue_local+0x48/0x110
<4> [161.360798] ? handle_bug+0x3c/0x70
<4> [161.360808] ? exc_invalid_op+0x18/0x70
<4> [161.360819] ? asm_exc_invalid_op+0x1a/0x20
<4> [161.360850] ? debug_print_object+0x80/0xb0
<4> [161.360864] ? __pfx___i915_vma_active+0x10/0x10 [i915]
<4> [161.361347] debug_object_free+0xeb/0x110
<4> [161.361362] i915_active_fini+0x14/0x130 [i915]
<4> [161.361866] release_references+0xfe/0x1f0 [i915]
<4> [161.362543] i915_vma_parked+0x1db/0x380 [i915]
<4> [161.363129] __gt_park+0x121/0x230 [i915]
<4> [161.363515] ____intel_wakeref_put_last+0x1f/0x70 [i915]
<4> [161.363813] process_one_work+0x24e/0x500
<4> [161.363839] worker_thread+0x4f/0x3a0
<4> [161.363858] ? __pfx_worker_thread+0x10/0x10
<4> [161.363870] kthread+0xff/0x130
<4> [161.363880] ? __pfx_kthread+0x10/0x10
<4> [161.363894] ret_from_fork+0x29/0x50
<4> [161.363925] </TASK>
<4> [161.363931] irq event stamp: 1514575
<4> [161.363937] hardirqs last enabled at (1514581): [<ffffffff8116ad66>] __up_console_sem+0x66/0x70
<4> [161.363950] hardirqs last disabled at (1514586): [<ffffffff8116ad4b>] __up_console_sem+0x4b/0x70
<4> [161.363960] softirqs last enabled at (1514500): [<ffffffff81caac6d>] __do_softirq+0x2bd/0x3a9
<4> [161.363972] softirqs last disabled at (1514495): [<ffffffff810d7bfe>] irq_exit_rcu+0x8e/0xd0